--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,7 @@
   pages={1--5},
   year={2021},
   publisher={Clausius Scientific Press}
-  preview={brownian-motion.gif}
+  preview={brownian-motion. gif}
 }
 
 
@@ -20,6 +20,10 @@
       year={2022},
       abstract={In recent years, with the rapid development of computer information technology, the development of artificial intelligence has been accelerating. The traditional geometry recognition technology is relatively backward and the recognition rate is low. In the face of massive information database, the traditional algorithm model inevitably has the problems of low recognition accuracy and poor performance. Deep learning theory has gradually become a very important part of machine learning. The implementation of convolutional neural network (CNN) reduces the difficulty of graphics generation algorithm. In this paper, using the advantages of lenet-5 architecture sharing weights and feature extraction and classification, the proposed geometric pattern recognition algorithm model is faster in the training data set. By constructing the shared feature parameters of the algorithm model, the cross-entropy loss function is used in the recognition process to improve the generalization of the model and improve the average recognition accuracy of the test data set}
       eprint={2404.16561},
+      journal={Scientific Journal of Intelligent Systems Research},
+      volume={4},
+      number={6},
+      pages={1--6}
       archivePrefix={arXiv},
       primaryClass={cs.CV},
       url={https://arxiv.org/abs/2404.16561}, 
