--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @article{wang2021research,
   title={Research status and future prospects of machine learning algorithm in big data analysis},
-  author={Wang, Haonan and others},
+  author={Wang, Haonan},
   journal={Journal of Network Computing and Applications},
   volume={6},
   number={1},
