--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -27,7 +27,7 @@
       archivePrefix={arXiv},
       primaryClass={cs.CV},
       url={https://arxiv.org/abs/2404.16561}, 
-      preview={domain_categories_with_relations.png}
+      preview={paper2022_1.png}
 }
 
 }
