--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,7 @@
   pages={1--5},
   year={2021},
   publisher={Clausius Scientific Press}
-  preview={brownian-motion. gif}
+  preview={paper2021_1.png}
 }
 
 
