--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,6 +11,7 @@
   year={2021},
   publisher={Clausius Scientific Press}
   preview={paper2021_1.png}
+  pdf={https://www.clausiuspress.com/assets/default/article/2021/06/01/article_1622604557.pdf}
 }
 
 
@@ -28,6 +29,7 @@
       primaryClass={cs.CV},
       url={https://arxiv.org/abs/2404.16561}, 
       preview={paper2022_1.png}
+      pdf={https://arxiv.org/abs/2404.16561}
 }
 
 }
